--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "@tarojs/taro": "3.6.7",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-refresh": "^0.11.0"
+    "react-refresh": "^0.11.0",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
