--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,16 @@
     "resolveJsonModule": true,
     "typeRoots": [
       "node_modules/@types"
-    ]
+    ],
+    "paths": {
+      "@/src/*": ["./src/*"],
+      "@/stores/*": ["./src/stores/*"],
+      "@/components/*": ["./src/components/*"],
+      "@/utils/*": ["./src/utils/*"],
+      "@/assets/*": ["./src/assets/*"],
+      "@/package": ["./package.json"],
+      "@/project": ["./project.config.json"],
+    }
   },
   "include": ["./src", "./types"],
   "compileOnSave": false
