--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "postcss": "^8.4.18",
     "postcss-loader": "^7.3.3",
+    "simple-zustand-devtools": "^1.1.0",
     "style-loader": "1.3.0",
     "stylelint": "^14.4.0",
     "taro-plugin-tailwind": "^1.3.4",
