--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "Android >= 4.1",
     "ios >= 8"
   ],
-  "author": "",
-  "license": "MIT",
+  "author": "Evan<evan@yldm.tech>",
   "dependencies": {
     "@babel/runtime": "^7.22.15",
     "@nutui/nutui-react-taro": "^2.0.18",
@@ -83,12 +82,14 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.30",
     "postcss-loader": "^7.3.3",
+    "prerender-spa-plugin": "^3.4.0",
     "simple-zustand-devtools": "^1.1.0",
     "style-loader": "3.3.3",
     "stylelint": "^15.10.3",
     "taro-plugin-tailwind": "^1.3.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
-    "webpack": "^5.88.2"
+    "webpack": "^5.88.2",
+    "webpack-bundle-analyzer": "^4.9.1"
   }
 }
