--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "css": "sass"
   },
   "scripts": {
-    "build:weapp": "taro build --type weapp",
-    "build:swan": "taro build --type swan",
-    "build:alipay": "taro build --type alipay",
-    "build:tt": "taro build --type tt",
-    "build:h5": "taro build --type h5",
-    "build:rn": "taro build --type rn",
-    "build:qq": "taro build --type qq",
-    "build:jd": "taro build --type jd",
+    "build:weapp": "NODE_ENV=production taro build --type weapp",
+    "build:swan": "NODE_ENV=production taro build --type swan",
+    "build:alipay": "NODE_ENV=production taro build --type alipay",
+    "build:tt": "NODE_ENV=production taro build --type tt",
+    "build:h5": "NODE_ENV=production taro build --type h5",
+    "build:rn": "NODE_ENV=production taro build --type rn",
+    "build:qq": "NODE_ENV=production taro build --type qq",
+    "build:jd": "NODE_ENV=production taro build --type jd",
     "build:quickapp": "taro build --type quickapp",
     "dev:weapp": "npm run build:weapp -- --watch",
     "dev:swan": "npm run build:swan -- --watch",
