--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "dev:rn": "npm run build:rn -- --watch",
     "dev:qq": "npm run build:qq -- --watch",
     "dev:jd": "npm run build:jd -- --watch",
-    "dev:quickapp": "npm run build:quickapp -- --watch"
+    "dev:quickapp": "npm run build:quickapp -- --watch",
+    "lint": "eslint --fix 'src/**/*.{js,jsx,ts,tsx}'"
   },
   "browserslist": [
     "last 3 versions",
@@ -59,8 +60,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.22.20",
+    "@commitlint/config-conventional": "^17.7.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@tarojs/cli": "3.6.17",
+    "@tarojs/plugin-doctor": "^0.0.11",
     "@tarojs/taro-loader": "3.6.17",
     "@tarojs/webpack5-runner": "3.6.17",
     "@types/node": "^20.6.4",
@@ -70,19 +73,27 @@
     "@types/react-syntax-highlighter": "^15.5.7",
     "@types/react-test-renderer": "^18.0.2",
     "@types/react-transition-group": "^4.4.6",
+    "@types/sass": "^1.45.0",
     "@types/webpack-env": "^1.18.1",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
     "babel-plugin-import": "^1.13.8",
     "babel-preset-taro": "3.6.17",
     "eslint": "^8.50.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-standard": "^17.1.0",
     "eslint-config-taro": "3.6.17",
     "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-n": "^16.1.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.30",
     "postcss-loader": "^7.3.3",
     "prerender-spa-plugin": "^3.4.0",
+    "prettier": "^3.0.3",
+    "sass": "^1.68.0",
     "simple-zustand-devtools": "^1.1.0",
     "style-loader": "3.3.3",
     "stylelint": "^15.10.3",
