--- a/package.json
+++ b/package.json
@@ -66,14 +66,15 @@
     "@tarojs/plugin-doctor": "^0.0.11",
     "@tarojs/taro-loader": "3.6.17",
     "@tarojs/webpack5-runner": "3.6.17",
-    "@types/node": "^20.6.4",
+    "@types/node": "^20.6.5",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-syntax-highlighter": "^15.5.7",
     "@types/react-test-renderer": "^18.0.2",
     "@types/react-transition-group": "^4.4.6",
-    "@types/sass": "^1.43.1",
+    "sass": "^1.68.0",
+    "@types/sass": "1.43.1",
     "@types/webpack-env": "^1.18.1",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
@@ -93,7 +94,6 @@
     "postcss-loader": "^7.3.3",
     "prerender-spa-plugin": "^3.4.0",
     "prettier": "^3.0.3",
-    "sass": "^1.68.0",
     "simple-zustand-devtools": "^1.1.0",
     "style-loader": "3.3.3",
     "stylelint": "^15.10.3",
