--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@tarojs/taro": "3.6.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-native-safe-area-context": "^4.7.2",
     "react-refresh": "^0.14.0",
     "zustand": "^4.4.1"
   },
@@ -73,7 +74,6 @@
     "@types/react-syntax-highlighter": "^15.5.7",
     "@types/react-test-renderer": "^18.0.2",
     "@types/react-transition-group": "^4.4.6",
-    "sass": "^1.68.0",
     "@types/sass": "1.43.1",
     "@types/webpack-env": "^1.18.1",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
@@ -94,6 +94,7 @@
     "postcss-loader": "^7.3.3",
     "prerender-spa-plugin": "^3.4.0",
     "prettier": "^3.0.3",
+    "sass": "^1.68.0",
     "simple-zustand-devtools": "^1.1.0",
     "style-loader": "3.3.3",
     "stylelint": "^15.10.3",
