--- a/package.json
+++ b/package.json
@@ -56,12 +56,14 @@
     "@tarojs/taro": "3.6.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-native": "^0.72.5",
     "react-native-safe-area-context": "^4.7.2",
     "react-refresh": "^0.14.0",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.22.20",
+    "@babel/preset-env": "^7.1.6",
     "@commitlint/config-conventional": "^17.7.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@tarojs/cli": "3.6.17",
